--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -4,15 +4,15 @@
 
     To get one, follow this link, follow the directions and press "Create" at the end:
 
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=65:85:1F:52:96:BD:D4:9D:74:9F:7D:69:4C:A7:C3:2B:21:F3:DC:E1%3Bbr.com.oceanbrasil.android_gps_23_06_21
+    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=6D:4E:73:26:7B:7D:DB:8F:04:0F:3C:E4:F0:D1:FB:32:63:C1:FC:24%3Bcom.oceanbrasil.android_gps_23_06_2021
 
     You can also add your credentials to an existing key, using these values:
 
     Package name:
-    br.com.oceanbrasil.android_gps_23_06_21
+    com.oceanbrasil.android_gps_23_06_2021
 
     SHA-1 certificate fingerprint:
-    65:85:1F:52:96:BD:D4:9D:74:9F:7D:69:4C:A7:C3:2B:21:F3:DC:E1
+    6D:4E:73:26:7B:7D:DB:8F:04:0F:3C:E4:F0:D1:FB:32:63:C1:FC:24
 
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCGNnldvfgbolf8XUI9PxWW7T5BM4kes_U</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCndwCJKxELWeiprQUenvdpaafnNhQOe0U</string>
 </resources>
